@@ -20,7 +20,7 @@ log4j.appender.CONSOLE.Threshold=INFO
 
 # File Appender
 log4j.appender.LOGFILE=org.apache.log4j.FileAppender
-log4j.appender.LOGFILE.File=moviejukebox.log
+log4j.appender.LOGFILE.File=${file.name}.log
 log4j.appender.LOGFILE.layout=com.moviejukebox.tools.FilteringLayout
 log4j.appender.LOGFILE.layout.ConversionPattern=[%d{HH:mm:ss} - %-8t] %m%n
 log4j.appender.LOGFILE.Threshold=DEBUG
@@ -28,7 +28,7 @@ log4j.appender.LOGFILE.Append=false
 
 # ERRORFILE.File Appender
 log4j.appender.ERRORFILE=org.apache.log4j.FileAppender
-log4j.appender.ERRORFILE.File=moviejukebox.ERROR.log
+log4j.appender.ERRORFILE.File=${file.name}.ERROR.log
 log4j.appender.ERRORFILE.layout=com.moviejukebox.tools.FilteringLayout
 log4j.appender.ERRORFILE.layout.ConversionPattern=[%d{HH:mm:ss} - %-8t] %-5p %c %x - %m%n
 log4j.appender.ERRORFILE.Threshold=WARN
