@@ -59,6 +59,19 @@
 		<dependency>
 			<groupId>org.pojava</groupId>
 			<artifactId>pojava</artifactId>
+			<version>2.5.3</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.javolution</groupId>
+			<artifactId>javolution</artifactId>
+			<version>5.2.6</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.16</version>
 		</dependency>
 
 		<dependency>
@@ -111,19 +124,6 @@
 			<systemPath>${basedir}/lib/simmetrics.jar</systemPath>
 		</dependency>
 
-		<dependency>
-			<groupId>org.javolution</groupId>
-			<artifactId>javolution</artifactId>
-			<version>5.2.6</version>
-			<type>jar</type>
-			<scope>compile</scope>
-		</dependency>
-		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>1.2.16</version>
-			<scope>compile</scope>
-		</dependency>
 	</dependencies>
 
 	<build>
